Ein Satz zu Größeneinschränkung

--- a/doc/GPN-Intro/Intro.tex
+++ b/doc/GPN-Intro/Intro.tex
@@ -123,6 +123,7 @@ Eine Regel gibt eine von drei Aktionen an:
 \item Licht wird von den Zweigen eingefangen
 \item Im Schatten gibt es weniger Licht
 \item Je mehr Licht, desto schneller das Wachstum
+\item Je größer die Pflanze, desto langsamer das Wachstum (wird ggf. noch angepasst)
 \item Alles aktuelles Wachstum findet gleichzeitig statt und wird gleichzeitig beendet
 \end{itemize}
 \end{frame}
